--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/9855ed748f.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
